prj-ada-contabilidade/infraestrutura/gateway_nat_route.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public.id
}


# Ele cria um Elastic IP (EIP), um endereço IP estático na nuvem pública da AWS.
# Quando associado a um NAT Gateway, ele permite que instâncias em sub-redes privadas se comuniquem com a internet,
#  mantendo o tráfego de entrada bloqueado.
resource "aws_eip" "nat" {
  tags = {
    Name = "nat-eip"
  }
}



resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat.id
  }
}

resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
